syntax = "proto3";

package com.academy.fintech.application;

option java_multiple_files = true;

service ApplicationService{
  rpc Create(ApplicationRequest) returns (ApplicationResponse) {}
}

message ApplicationRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  int32 salary = 4;
  int32 disbursement_amount = 5;
}

message ApplicationResponse {
  string application_id = 1;
}

// Request Path
//com.academy.fintech.application.ApplicationService/Create